--- a/src/main/webapp/WEB-INF/views/new.html
+++ b/src/main/webapp/WEB-INF/views/new.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>new user</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/}" th:object="${users}">
+<form th:method="POST" th:action="@{/}" th:object="${user}">
+    <input type="hidden" name="_method" value="post"/>
     <label for="name">Enter name: </label>
-    <input type="text" th:field="*{users.username}" id="name"/>
-    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{users.username}">Name Error</div>
+    <input type="text" th:field="*{username}" id="name"/>
+    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{username}">Name Error</div>
     <br/>
     <label for="email">Enter email: </label>
-    <input type="text" th:field="*{users.email}" id="email"/>
-    <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{users.email}">Email Error</div>
+    <input type="text" th:field="*{email}" id="email"/>
+    <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
     <br/>
     <input type="submit" value="Create!"/>
 </form>
